Fixed homepage image width and height

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -31,9 +31,9 @@
         </div>
         <div class="col-sm-3 flex-grow-0 bg-primary homeContainerDiv"><!-- Statistics -->
  
-            <div class="w-50 h-50">
+            <div class="w-50 h-50 infoContainer">
 
-                <img id="shopOnlineImg" width="400px" src='/assets/images/shoppingBanner.jpg'/>
+                <img id="shopOnlineImg" src='/assets/images/shoppingBanner.jpg'/>
                 <hr>
                <p>Available products in our store: {{productsCounter.count}}</p>
                <hr>
