Mobile View fixes, API link improvement to be based on var

--- a/client/src/app/main/main.component.css
+++ b/client/src/app/main/main.component.css
@@ -3,3 +3,10 @@ div{
     margin-top: 125px;
     background-color: whitesmoke;
 }
+
+@media screen and (max-width: 480px) {
+    div{
+        margin-top: 25px;
+    }
+    
+}
