--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -133,3 +133,13 @@ textarea {
     background-color: #0074D9;
 
 }
+
+@media screen and (max-width: 480px) {
+	footer {
+		position: relative;
+    }
+    .navbar{
+        position: relative;
+    }
+    
+}
